--- a/css/login.css
+++ b/css/login.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	display: inline;
 	font-family: 'Raleway', sans-serif;
+	color: #413E3E;
 }
 
 .top-header {
@@ -70,6 +71,7 @@ body {
 .card .top-card .title-card h2 {
 	margin-top: 0;
 	font-size: 24px;
+	font-weight: 500;
 }
 
 
